@@ -141,6 +141,8 @@ GEN     F2xq_matrix_pow(GEN y, long n, long m, GEN P);
 GEN     F2xq_mul(GEN x, GEN y, GEN pol);
 GEN     F2xq_order(GEN a, GEN ord, GEN T);
 GEN     F2xq_pow(GEN x, GEN n, GEN pol);
+GEN     F2xq_pow_init(GEN x, GEN n, long k,  GEN T);
+GEN     F2xq_pow_table(GEN x, GEN n, GEN R, GEN T);
 GEN     F2xq_powu(GEN x, ulong n, GEN pol);
 GEN     F2xq_powers(GEN x, long l, GEN T);
 GEN     F2xq_sqr(GEN x,GEN pol);
@@ -397,6 +399,8 @@ GEN     Flxq_mul(GEN x, GEN y, GEN T, ulong p);
 ulong   Flxq_norm(GEN x, GEN T, ulong p);
 GEN     Flxq_order(GEN a, GEN ord, GEN T, ulong p);
 GEN     Flxq_pow(GEN x, GEN n, GEN T, ulong p);
+GEN     Flxq_pow_init(GEN x, GEN n, long k,  GEN T, ulong p);
+GEN     Flxq_pow_table(GEN x, GEN n, GEN R, GEN T, ulong p);
 GEN     Flxq_powu(GEN x, ulong n, GEN T, ulong p);
 GEN     Flxq_powers(GEN x, long l, GEN T, ulong p);
 GEN     Flxq_sqr(GEN y,GEN T,ulong p);
@@ -1799,6 +1803,8 @@ int     Fp_ispower(GEN x, GEN K, GEN p);
 GEN     Fp_log(GEN a, GEN g, GEN ord, GEN p);
 GEN     Fp_order(GEN a, GEN o, GEN p);
 GEN     Fp_pow(GEN a, GEN n, GEN m);
+GEN     Fp_pow_init(GEN x, GEN n, long k, GEN p);
+GEN     Fp_pow_table(GEN x, GEN n, GEN R, GEN p);
 GEN     Fp_powers(GEN x, long n, GEN p);
 GEN     Fp_pows(GEN A, long k, GEN N);
 GEN     Fp_powu(GEN x, ulong k, GEN p);
@@ -2362,6 +2368,8 @@ GEN gen_pow(GEN x, GEN n, void *E, GEN (*sqr)(void*,GEN), GEN (*mul)(void*,GEN,G
 GEN gen_pow_fold(GEN x, GEN n, void *E, GEN (*sqr)(void*,GEN), GEN (*msqr)(void*,GEN));
 GEN gen_pow_fold_i(GEN x, GEN n, void *E, GEN (*sqr)(void*,GEN), GEN (*msqr)(void*,GEN));
 GEN gen_pow_i(GEN x, GEN n, void *E, GEN (*sqr)(void*,GEN), GEN (*mul)(void*,GEN,GEN));
+GEN gen_pow_init(GEN x, GEN n, long k, void *E, GEN (*sqr)(void*,GEN), GEN (*mul)(void*,GEN,GEN));
+GEN gen_pow_table(GEN x, GEN n, GEN C, void *E, GEN (*one)(void*), GEN (*mul)(void*,GEN,GEN));
 GEN gen_powers(GEN x, long l, int use_sqr, void *E, GEN (*sqr)(void*,GEN), GEN (*mul)(void*,GEN,GEN), GEN (*one)(void*));
 GEN gen_powu(GEN x, ulong n, void *E, GEN (*sqr)(void*,GEN), GEN (*mul)(void*,GEN,GEN));
 GEN gen_powu_fold(GEN x, ulong n, void *E, GEN (*sqr)(void*,GEN), GEN (*msqr)(void*,GEN));
