@@ -9,8 +9,12 @@ Done for version 2.10.1 (released ??/??/2018):
       2- [libpari] rename polcoeff0 -> polcoef, polcoeff_i -> polcoef_i,
          truecoeff -> truecoef
       3- t_LIST corrupted on writebin / read [#2040]
+
   Added
       1- [libpari] denom_i, numer_i
+BA    2- [libpari] Fp_pow_init, Flxq_pow_init, F2xq_pow_init
+                   Fp_pow_table, Flxq_pow_table, F2xq_pow_table
+                   gen_pow_init, gen_pow_table
 
 Done for version 2.10.0 (released 15/05/2018):
   Fixed
